--- a/JobSeeker/JobSeeker.csproj
+++ b/JobSeeker/JobSeeker.csproj
@@ -26,4 +26,9 @@
     <ProjectReference Include="..\JobSeeker.ViewModels\JobSeeker.ViewModels.csproj" />
   </ItemGroup>
 
+
+  <ItemGroup>
+    <Folder Include="wwwroot\images\" />
+  </ItemGroup>
+
 </Project>
